fixing bad-looking overlap

--- a/client/stylesheets/idle.less
+++ b/client/stylesheets/idle.less
@@ -29,6 +29,10 @@
 }
 
 .box {
+  .box-title {
+    padding-right: 140px!important;
+  }
+
   .box-header {
     padding-bottom: 0;
   }
